--- a/index.html
+++ b/index.html
@@ -34,6 +34,55 @@
     <h2>Your Tasks</h2>
     <ul id="task-list">
       
+        <!-- Active Task -->
+        <li class="task-item">
+          <span class="task-title">Finish Educare project documentation</span>
+          <div class="task-actions">
+            <button title="Edit">&#9998;</button>
+            <button title="Mark Complete">&#10003;</button>
+            <button title="Delete">&#128465;</button>
+          </div>
+        </li>
+
+        <!-- Completed Task -->
+        <li class="task-item task-completed">
+          <span class="task-title">Review Laravel CRUD tutorial</span>
+          <div class="task-actions">
+            <button title="Edit">&#9998;</button>
+            <button title="Undo">&#8635;</button>
+            <button title="Delete">&#128465;</button>
+          </div>
+        </li>
+
+        <!-- Active Task -->
+        <li class="task-item">
+          <span class="task-title">Prepare slides for coding class</span>
+          <div class="task-actions">
+            <button title="Edit">&#9998;</button>
+            <button title="Mark Complete">&#10003;</button>
+            <button title="Delete">&#128465;</button>
+          </div>
+        </li>
+
+        <!-- Completed Task -->
+        <li class="task-item task-completed">
+          <span class="task-title">Read about JavaScript event delegation</span>
+          <div class="task-actions">
+            <button title="Edit">&#9998;</button>
+            <button title="Undo">&#8635;</button>
+            <button title="Delete">&#128465;</button>
+          </div>
+        </li>
+
+        <!-- Active Task -->
+        <li class="task-item">
+          <span class="task-title">Clean up CSS and test responsive layout</span>
+          <div class="task-actions">
+            <button title="Edit">&#9998;</button>
+            <button title="Mark Complete">&#10003;</button>
+            <button title="Delete">&#128465;</button>
+          </div>
+        </li>
     </ul>
   </section>
 
