--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-=======
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -49,12 +48,7 @@
     </main>
 
     <footer class="footer">
-      <p class="footer-text">
-        Educare Task Manager © 2025 | Built for learning CRUD operations
-      </p>
-    </footer>
-
-    <script src="javascript.js"></script>
-  </body>
-</html>
->>>>>>> main
+      <p class="footer-text">Educare Task Manager © 2025 | Built for learning CRUD operations</p>    
+    </footer>    
+      <script src="javascript.js"></script>  </body
+      </html>
