Resolved merge conflict and cleaned HTML file

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
     </main>
 
     <footer class="footer">
-      <p class="footer-text">
-        Educare Task Management Application © 2025 | Built for learning CRUD operations
-      </p>
+      <p class="footer-text">Educare Task Management Application © 2025 | Built for learning CRUD operations</p>
     </footer>
 
     <script src="javascript.js"></script>
