--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Educare Task Manager</title>
+    <title>Educare Task Management Application</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body">
     <header class="header">
-      <h1 class="main-title">Educare Task Manager</h1>
+      <h1 class="main-title">Educare Task Management Application</h1>
       <p class="subtitle">Manage your daily tasks easily</p>
     </header>
 
@@ -47,11 +48,9 @@
     </main>
 
     <footer class="footer">
-      <p class="footer-text">
-        Educare Task Manager © 2025 | Built for learning CRUD operations
-      </p>
-    </footer>
-
-    <script src="javascript.js"></script>
-  </body>
-</html>
+      <p class="footer-text">Educare Task Management Application © 2025 | Built for learning CRUD operations</p> 
+      <a href="./presentation.html" class="btn">Learn More</a>   
+    </footer>    
+      <script src="javascript.js"></script>  
+     </body>
+    </html>
