Commit the latest changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,15 +28,10 @@
           type="text"
           id="task-title"
           placeholder="Enter task title"
-          required
-        />
+          required/>
 
         <div class="optional-fields" id="optional-fields">
-          <textarea
-            id="task-description"
-            placeholder="Task description (optional)"
-          ></textarea>
-
+          <textarea id="task-description" placeholder="Task description (optional)"></textarea>
           <div class="form-row">
             <div class="form-group">
               <label for="task-priority">Priority</label>
