Update the latest changes

--- a/index.html
+++ b/index.html
@@ -23,18 +23,15 @@
   <main>
     <section id="task-input">
       <form id="task-form">
-        <input
-          type="text"
+        <input type="text"
           id="task-title"
           placeholder="Enter task title"
-          required
-        />
+          required />
 
         <div class="optional-fields" id="optional-fields">
           <textarea
             id="task-description"
-            placeholder="Task description (optional)"
-          ></textarea>
+            placeholder="Task description (optional)"></textarea>
 
           <div class="form-row">
             <div class="form-group">
