Remove references to smart form fields in presentation slides

--- a/presentation.html
+++ b/presentation.html
@@ -246,7 +246,7 @@
         <li>Task Filtering (All, Active, Completed)</li>
         <li>Priority Levels (Low, Medium, High)</li>
         <li>Due Dates & Task Descriptions</li>
-        <li>Smart Form Fields (appear on typing)</li>
+        <!-- <li>Smart Form Fields (appear on typing)</li> -->
         <li>Persistent storage with localStorage</li>
         <li>Beautiful dark UI + smooth animations</li>
         <li>Error handling and input validation</li>
@@ -262,7 +262,7 @@
         <li><strong>Priority System:</strong> 3 levels (High, Medium, Low) with color coding</li>
         <li><strong>Due Dates:</strong> Optional date picker with formatted display</li>
         <li><strong>Descriptions:</strong> Add details to tasks for context</li>
-        <li><strong>Smart Form:</strong> Optional fields appear when you start typing</li>
+        <!-- <li><strong>Smart Form:</strong> Optional fields appear when you start typing</li> -->
         <li><strong>Live Counters:</strong> See task counts in filter tabs</li>
         <li><strong>Toast Notifications:</strong> Instant feedback for actions</li>
         <li><strong>Delete Confirmation:</strong> Modal to prevent accidental deletes</li>
@@ -307,7 +307,7 @@
     <section class="slide">
       <h2>How It Works</h2>
       <ul>
-        <li><strong>Add Task:</strong> Type title → optional fields appear automatically</li>
+        <li><strong>Add Task:</strong> Type title</li>
         <li><strong>Priority:</strong> Select from Low (1), Medium (2), High (3)</li>
         <li><strong>Due Date:</strong> Pick a date or leave empty</li>
         <li><strong>Description:</strong> Add task details for more context</li>
